examples/sugars/m12_6_uom_undeclared_unit.err.expected
error: unknown unit `USD`; declare it with `unit USD` (atomic) or `unit USD = <expr>` (alias) before use
m12_6_uom_undeclared_unit.kai:14
m12_6_uom_undeclared_unit.kai:17
