examples/sugars/m12_6_uom_undeclared_unit.kai
# m12.6.x #4 (negative) — a unit symbol must be introduced by an
# explicit `unit <Name>` declaration before it can appear in a
# dimensioned type `Real<u>`, `Int<u>`, or `Decimal<u>`. Using `USD`
# in a signature or literal without a preceding `unit USD` is an
# unknown-unit error.
#
# The compiler currently accepts undeclared unit symbols silently —
# this fixture is the regression pin for the fix lane that closes
# that gap. It is parked as a negative fixture so the test suite
# notices when the typer starts rejecting the program.

# NOTE: no `unit USD` declaration. The references below should error.

fn id_money(m: Real<USD>) : Real<USD> = m

fn main() : Unit / Stdout {
  let m = id_money(50.0<USD>)
  Stdout.print("paid=#{show(m)}")
}
